resources/css/evenements/calendrier.scss
.icon-container {
    margin: 0 20px 0 20px;
    border-radius: 50px;
    background-color: var(--grey);
    cursor: pointer;
    padding: 10px;
    border: 2px solid var(--couleur_accentuation);
    transition: border 150ms ease;

    &:hover {
        border: 2px solid var(--couleur_accentuation_air_light);

        i {
            color: var(--couleur_accentuation_air_light);
        }
    }

    i {
        transition: color 150ms ease;

        color: var(--couleur_accentuation);
    }
}

#calendrier {
    width: 100%;
    padding: 10px var(--side-padding);
    display: grid;
    grid-template-columns: repeat(7, 1fr);

    .nom_jour {
        text-align: center;
        font-weight: var(--fw-medium);
        padding-bottom: 7px;
        border-bottom: 1px solid rgba(166, 168, 179, 0.12);
    }

    .jour {
        min-height: 100px;
        box-sizing: border-box;
        --border: 1px solid rgba(166, 168, 179, 0.12);
        border-bottom: var(--border);
        border-right: var(--border);

        .num-jour {
            padding: 3px 8px 0;
        }

        &:nth-child(7n + 1) {
            border-left: var(--border);
        }

        &.desactive {
            background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='rgba(127,127,127,0.15)' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
            cursor: not-allowed;
        }
    }
}

.popup .card {
    display: flex;
    flex-direction: column;
}

.popup-cachee {
    display: none;
}

#boutons {
    display: flex;
    align-items: center;
    margin-bottom: 20px;

    #date {
        margin: 0;
        width: 13ch;
    }
}

.bouton {
    padding: 10px 30px;
    margin-left: 20px;
    margin-right: 20px;
}

.evenement {
    color: var(--couleur_police_accentuation);
    transition: box-shadow 150ms ease-in-out, filter 150ms ease-in-out;
    padding: 3px 8px;
    cursor: pointer;
    user-select: none;
    position: relative;
    z-index: 1;
}

.evenement:hover {
    z-index: 2;
    box-shadow: 0 0 10px 0 rgb(127, 127, 127, 0.25);
    filter: brightness(1.1);
}

.non_valide {
    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='rgba(255, 0, 0, 0.55)' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
}

#retour {
    cursor: pointer;
    font-size: 20px;
    align-self: end;
    padding: 5px;
    i {
        color: var(--couleur_accentuation);
    }
    &:hover {
        i {
            color: var(--couleur_accentuation_air_light);
        }
    }
}

@media (max-width: 768px) {
    /*FAIRE POPUP*/
    #calendrier {
        grid-template-columns: repeat(1, 1fr);
        overflow-y: scroll;
        height: 80vh;
        gap: 1.2em;

        /* Hide scrollbar for Chrome, Safari and Opera */
        &::-webkit-scrollbar {
            display: none;
        }

        -ms-overflow-style: none;
        /* IE and Edge */
        scrollbar-width: none;
        /* Firefox */

        .jour {
            margin: auto 2%;
            display: flex;
            flex-direction: row;
            padding: 5px 8px 5px 0;
            border: none;

            &:nth-child(7n + 1) {
                border: none;
            }

            &#today {
                box-shadow: 0px 0px 7px rgba(255, 255, 255, 0.25);
                border: 1px solid var(--couleur_accentuation_air);
            }
        }
    }

    .num_jour {
        flex: 20 1 auto;
        border-radius: 10px;
    }

    .num_jour .evenement {
        border-radius: 10px;
        padding-left: 5px;
        padding-right: 5px;
        margin-top: 2px;
        margin-bottom: 2px;
    }

    #titre {
        font-size: 1.2em;
    }
}

@media (max-width: 615px) {
    #main-content #boutons {
        margin-top: 50px;
    }
}

